--- a/funingo-main/public/index.html
+++ b/funingo-main/public/index.html
@@ -41,6 +41,7 @@
     />
 
     <title>Funingo</title>
+    <script src="https://cdn.tailwindcss.com"></script>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
